Fix occasional layout issue with form labels

--- a/src/www/css/main.scss
+++ b/src/www/css/main.scss
@@ -295,6 +295,7 @@ main {
     }
     
     &__label {
+        clear: left;
         float: left;
         width: 120px;
         line-height: 1.4;
